--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <section id="videos">
         <h2>Latest Videos</h2>
         <div class="video-grid">
-            <button onclick="window.location.href='https://www.youtube.com/watch?v=your-video-link1'">Watch Video 1</button>
-            <button onclick="window.location.href='https://www.youtube.com/watch?v=your-video-link2'">Watch Video 2</button>
-            <button onclick="window.location.href='https://www.youtube.com/watch?v=your-video-link3'">Watch Video 3</button>
+            <button onclick="window.location.href='https://www.youtube.com/watch?v=AUJqW2L6JFU'">Blender Basics</button>
+            <button onclick="window.location.href='https://www.youtube.com/watch?v=tFAxSYuUmOE&t=159s'">HTML CSS and JS projects</button>
+            <button onclick="window.location.href='https://www.youtube.com/watch?v=eOJpmuAlyw0'">Dice Roller</button>
         </div>
     </section>
 
